--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <link rel="stylesheet" href="css/styles.css">
       <script src="js/jquery.min.js"></script>
 
+			<script src="js/binaryajax.js"></script>
+			<script src="js/exif.js"></script>
+			<script src="js/canvasResize.js"></script>
+
       <script type="text/javascript" src="js/pixastic.custom.js"></script>
 
 			<script type="text/javascript" src="js/qr/grid.js"></script>
